VM-全家桶/alertmanager/alertmanager-ingress.yaml
# grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: tensuns
spec:
  tls:
    - hosts:
        - "barry-alert.*.com"
      secretName: tls-*.com
  rules:
  - host: "barry-alert.*.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager
            port:
              number: 9093
